--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="서현규 - 프로필 링크">
-    <meta property="og:description" content="커리어 포트폴리오">
-    <meta property="og:image" content="공유할 이미지">
-    <title>서현규 - 프로필 링크</title>
+    <meta property="og:description" content="profile update">
+    <meta property="og:image" content="share images">
+    <title>wstar - profile_link</title>
     <style>
         @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
             * {
